--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <header>
         <nav>
-            <img src="./img/logo.jpg" alt="logo">
-            <img src="./img/menu_icon.svg" alt="menu nav">
+            <img class="logo" src="./img/logo.png" alt="logo">
+            <img class="menu-nav" src="./img/menu_icon.svg" alt="menu nav">
         </nav>
         <section>
             <h1>BRING YOUR CORPORATE FLEET TO THE NEXT LEVEL OF EFFICIENCY</h1>
             <p>At least <b>10% less</b> fuel consumption. Harmful emissions reduce as following</p>
-            <img src="./img/fuel_tank.jpg" alt="fuel_tank">
+            <img src="./img/fuel_tank.png" alt="fuel_tank">
             <img src="./img/statistic1.svg" alt="statistic1">
             <p>Highly dispersed particles such as soot - harmful soot.</p>
             <img src="./img/statistic2.svg" alt="statistic2">
