--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav-panel">
             <img class="logo" src="./img/logo.png" alt="logo">
             <img class="menu-nav" src="./img/menu_icon.svg" alt="menu nav">
         </nav>
-        <section>
+        <!-- <hr> -->
+        <section class="wrapper">
             <h1>BRING YOUR CORPORATE FLEET TO THE NEXT LEVEL OF EFFICIENCY</h1>
             <p>At least <b>10% less</b> fuel consumption. Harmful emissions reduce as following</p>
             <img src="./img/fuel_tank.png" alt="fuel_tank">
-            <img src="./img/statistic1.svg" alt="statistic1">
-            <p>Highly dispersed particles such as soot - harmful soot.</p>
-            <img src="./img/statistic2.svg" alt="statistic2">
-            <p>Poisonous, odourless, tasteless and colourless</p>
+            <div class="staticsics-cart">
+                <img src="./img/statistic2.svg" alt="statistic2">
+                <p class="staticsics-cart-text">Highly dispersed particles such as soot - harmful soot.</p>
+            </div>
+            <div class="staticsics-cart">
+                <img src="./img/statistic1.svg" alt="statistic1">
+                <p class="staticsics-cart-text">Poisonous, odourless, tasteless and colourless</p>
+            </div>
+            
         </section>
     </header>
     <main></main>
