--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
             <img class="menu-nav" src="./img/menu_icon.svg" alt="menu nav">
         </nav>
         <!-- <hr> -->
-        <section class="wrapper">
+        <section class="greating wrapper">
             <h1>BRING YOUR CORPORATE FLEET TO THE NEXT LEVEL OF EFFICIENCY</h1>
             <p>At least <b>10% less</b> fuel consumption. Harmful emissions reduce as following</p>
             <img src="./img/fuel_tank.png" alt="fuel_tank">
             <div class="staticsics-cart">
-                <img src="./img/statistic2.svg" alt="statistic2">
+                <img class="staticsics-cart-img" src="./img/statistic2.svg" alt="statistic2">
                 <p class="staticsics-cart-text">Highly dispersed particles such as soot - harmful soot.</p>
             </div>
             <div class="staticsics-cart">
-                <img src="./img/statistic1.svg" alt="statistic1">
+                <img class="staticsics-cart-img" src="./img/statistic1.svg" alt="statistic1">
                 <p class="staticsics-cart-text">Poisonous, odourless, tasteless and colourless</p>
             </div>
-            
         </section>
     </header>
     <main></main>
