--- a/index.html
+++ b/index.html
@@ -10,34 +10,26 @@
 </head>
 <body>
     <header>
-        <nav class="nav-panel">
-            <img class="logo" src="./img/logo.png" alt="logo">
-            <img class="menu-nav" src="./img/menu_icon.svg" alt="menu nav">
-            <span class="descktop-menu-nav">
-                <a href="#">Reviews</a>
-                <a href="#">Cooperation</a>
-                <a href="#">Contacts</a>
-            </span>
-        </nav>
-        <!-- <hr> -->
-        <section class="greating wrapper">
+        <div class="nav-wrapper">
+            <nav class="nav-panel">
+                <img class="logo" src="./img/logo.png" alt="logo">
+                <img class="menu-nav" src="./img/menu_icon.svg" alt="menu nav">
+                <span class="descktop-menu-nav">
+                    <a href="#">Reviews</a>
+                    <a href="#">Cooperation</a>
+                    <a href="#">Contacts</a>
+                </span>
+            </nav>    
+        </div>
+        
+        <hr class="horizontal-line">
+        <section class="greating">
+        
         <div class='mobile-section-content'>
             <h1>BRING YOUR CORPORATE FLEET TO THE NEXT LEVEL OF EFFICIENCY</h1>
-            <p>At least <b>10% less</b> fuel consumption. Harmful emissions reduce as following</p>
-            <img src="./img/fuel_tank.png" alt="fuel_tank">
-            <div class="staticsics-cart">
-                <img class="staticsics-cart-img" src="./img/statistic2.svg" alt="statistic2">
-                <p class="staticsics-cart-text">Highly dispersed particles such as soot - harmful soot.</p>
-            </div>
-            <div class="staticsics-cart">
-                <img class="staticsics-cart-img" src="./img/statistic1.svg" alt="statistic1">
-                <p class="staticsics-cart-text">Poisonous, odourless, tasteless and colourless</p>
-            </div>
-        </div>
-
-            <div class="desktop-section-content">
-                <h1>BRING YOUR CORPORATE FLEET TO THE NEXT LEVEL OF EFFICIENCY</h1>
-                <p>At least <b>10% less</b> fuel consumption. Harmful emissions reduce as following</p>
+            <p class="some-text">At least <b>10% less</b> fuel consumption. Harmful emissions reduce as following</p>
+            <img class="mobile-img" src="./img/fuel_tank.png" alt="fuel_tank">
+            <div class="desktop-statistics">
                 <div class="staticsics-cart">
                     <img class="staticsics-cart-img" src="./img/statistic2.svg" alt="statistic2">
                     <p class="staticsics-cart-text">Highly dispersed particles such as soot - harmful soot.</p>
@@ -47,8 +39,8 @@
                     <p class="staticsics-cart-text">Poisonous, odourless, tasteless and colourless</p>
                 </div>
             </div>
-            <img class="desktop-section-content-fuel-tank-img" src="./img/fuel_tank.png" alt="fuel_tank">
-
+        </div>
+        <img class="desktop-img" src="./img/fuel_tank.png" alt="fuel_tank">
         </section>
     </header>
     <main></main>
